# pdf-kit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Prd.md  README.md  claude.md
.github/workflows/: ci.yml
apps/web/: .env.example  README.md  package-lock.json  package.json
apps/web/src/app/: globals.css  landing.css  layout.tsx  page.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(app)/chunks/: page.tsx
apps/web/src/app/(app)/convert/: page.tsx
apps/web/src/app/(app)/render/: page.tsx
apps/web/src/app/api/pdfkit/[...path]/: route.ts
apps/web/src/app/chunks/: page.tsx
apps/web/src/app/docs/: page.tsx
apps/web/src/app/edit/: page.tsx
apps/web/src/app/extract/: page.tsx
apps/web/src/app/render/: page.tsx
apps/web/src/components/: shell.tsx  theme-toggle.tsx
apps/web/src/components/landing/: code-tabs.tsx  copy-button.tsx  theme-toggle.tsx
apps/web/src/components/pdf/: Dropzone.tsx  Uploader.tsx
apps/web/src/components/ui/: button.tsx  controls.tsx  display.tsx  index.ts
apps/web/src/lib/: download.ts  theme.ts
apps/web/src/lib/api/: client.ts  types.ts
crates/pdfkit/: Cargo.toml
crates/pdfkit-adapters/: Cargo.toml
crates/pdfkit-adapters/src/: lib.rs
crates/pdfkit-adapters/tests/: m8_adapters.rs
crates/pdfkit-api/: Cargo.toml  Dockerfile
crates/pdfkit-api/src/: dto.rs  error.rs  handlers.rs  main.rs  service.rs
crates/pdfkit-chunk/: Cargo.toml
crates/pdfkit-chunk/examples/: chunk_pdf.rs
crates/pdfkit-chunk/src/: lib.rs
crates/pdfkit-chunk/tests/: m6_chunk.rs  no_panic.rs  ruled_table.rs  serialize.rs  table_grid.rs  tagged_and_figures.rs
crates/pdfkit-cli/: Cargo.toml
crates/pdfkit-cli/src/: main.rs
crates/pdfkit-cli/tests/: m9_cli.rs
crates/pdfkit-core/: Cargo.toml
crates/pdfkit-core/benches/: pipeline.rs
crates/pdfkit-core/src/: classify.rs  document.rs  error.rs  extract.rs  figures.rs  geometry.rs  layout.rs  lib.rs  ocr.rs  pdfstr.rs  render.rs  ruled_lines.rs  tagged.rs  textrun.rs  types.rs
crates/pdfkit-core/tests/: figures.rs  layout.rs  m1_open_text.rs  m2_classify.rs  m4_extract.rs  m5_ocr.rs  outline_links.rs  tagged.rs
crates/pdfkit-docx/: Cargo.toml
crates/pdfkit-docx/src/: layout.rs  lib.rs  metrics.rs  model.rs  parse.rs
crates/pdfkit-docx/tests/: docx_to_pdf.rs
crates/pdfkit-edit/: Cargo.toml
crates/pdfkit-edit/src/: lib.rs
crates/pdfkit-edit/tests/: m7_edit.rs
crates/pdfkit-fixtures/: Cargo.toml
crates/pdfkit-fixtures/src/: lib.rs
crates/pdfkit-ocr/: Cargo.toml
crates/pdfkit-ocr/src/: lib.rs
crates/pdfkit-ocr/tests/: backends.rs
crates/pdfkit-render/: Cargo.toml
crates/pdfkit-render/src/: lib.rs
crates/pdfkit-render/tests/: m3_render.rs  pdfium_shared.rs
crates/pdfkit-wasm/: Cargo.toml
crates/pdfkit-wasm/src/: lib.rs
crates/pdfkit/src/: lib.rs
crates/pdfkit/tests/: ocr_pdfium.rs  umbrella.rs
fixtures/: README.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: parse.rs
scripts/: fetch-ocr-models.sh  fetch-pdfium.sh
