[workspace]
resolver = "2"
members = [
    "crates/pdfkit",
    "crates/pdfkit-core",
    "crates/pdfkit-render",
    "crates/pdfkit-ocr",
    "crates/pdfkit-chunk",
    "crates/pdfkit-edit",
    "crates/pdfkit-adapters",
    "crates/pdfkit-cli",
    "crates/pdfkit-wasm",
    "crates/pdfkit-fixtures",
    "crates/pdfkit-api",
]
# `cargo build` / `cargo test` without --workspace operate on these. The wasm
# crate is excluded from the default set because it targets wasm32; build it
# explicitly with `wasm-pack build crates/pdfkit-wasm`. CI / CLAUDE.md commands
# pass --workspace explicitly when they want everything.
default-members = [
    "crates/pdfkit",
    "crates/pdfkit-core",
    "crates/pdfkit-render",
    "crates/pdfkit-ocr",
    "crates/pdfkit-chunk",
    "crates/pdfkit-edit",
    "crates/pdfkit-adapters",
    "crates/pdfkit-cli",
    "crates/pdfkit-fixtures",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.82"
repository = "https://github.com/equitylist/pdfkit"
description = "A from-scratch, AI-oriented PDF toolkit in Rust: read-first extraction, structured chunk output, and a separate edit/create path."
keywords = ["pdf", "ocr", "extraction", "text", "rag"]
categories = ["text-processing", "multimedia"]

# Central version pins. Members opt in with `dep = { workspace = true }`.
# Versions are filled in / verified via `cargo add` as each milestone wires the
# dependency in (PRD §2). Heavy / native / networked deps stay behind features.
[workspace.dependencies]
thiserror = "2"
# lopdf 0.40: pure-Rust nom parser is built in (no parser feature flag); we opt
# out of async (tokio) / embed_image (image) / wasm_js to keep core lean.
lopdf = { version = "0.40", default-features = false }
image = { version = "0.25", default-features = false }
png = "0.17"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
# Pure-Rust, no native/network dep, so allowed outside a feature gate — but
# exposed via a crate `serde` feature so the minimal (--no-default-features)
# build can still drop it.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Build profiles: keep dev builds quick, release lean.
[profile.release]
opt-level = 3
lto = "thin"
