[package]
name = "pdfkit-chunk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "pdfkit chunking: structured/RAG chunks with page, bbox, kind, and heading path."

[dependencies]
pdfkit-core = { path = "../pdfkit-core", default-features = false }

[dev-dependencies]
pdfkit-fixtures = { path = "../pdfkit-fixtures" }
