[package]
name = "pdfkit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "pdfkit command-line interface."

[[bin]]
name = "pdfkit"
path = "src/main.rs"

[features]
default = []
# High-fidelity page rendering via PDFIUM (forwards to pdfkit-render).
render-pdfium = ["pdfkit-render/render-pdfium"]

[dependencies]
pdfkit-core = { path = "../pdfkit-core" }
pdfkit-render = { path = "../pdfkit-render" }
clap = { workspace = true }
serde_json = "1"

[dev-dependencies]
pdfkit-fixtures = { path = "../pdfkit-fixtures" }
