[package]
name = "pdfkit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "pdfkit core: document model, text extraction, page classification, and the extract entry point."

[dependencies]
thiserror = { workspace = true }
lopdf = { workspace = true }

[dev-dependencies]
pdfkit-fixtures = { path = "../pdfkit-fixtures" }
