[package]
name = "pdfkit-render"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "pdfkit render: page -> RGBA -> PNG, with a feature-flagged backend and a pixel budget."

[features]
default = ["render-native"]
# Pure-Rust render path (forwards to pdfkit-core). Zero native dependencies.
render-native = ["pdfkit-core/render-native"]
# High-fidelity render via PDFIUM (native/WASM library bound at runtime).
render-pdfium = []

[dependencies]
pdfkit-core = { path = "../pdfkit-core", default-features = false }

[dev-dependencies]
pdfkit-fixtures = { path = "../pdfkit-fixtures" }
