[package]
name = "pdfkit-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "pdfkit WebAssembly surface (wasm-bindgen)."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pdfkit-core = { path = "../pdfkit-core", default-features = false, features = ["render-native", "wasm"] }
wasm-bindgen = "0.2"
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
pdfkit-fixtures = { path = "../pdfkit-fixtures" }
